ACLOCAL_AMFLAGS = -I autotools/m4
DISTCHECK_CONFIGURE_FLAGS = $(distcheck_args)

SUBDIRS = Source DependentExtensions

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = autotools/RakNet.pc $(pkgconfig_add_data)

EXTRA_DIST = 2.x_to_3.x_upgrade.txt CMakeLists.txt DMCMakefile.win Doxyfile Help Lib nbproject RakNet.cbp RakNet.dev  RakNet.sln RakNet_vc8.sln readme.txt Samples
